@@ -5,6 +5,7 @@
     * Ensure _librsync.so is regenned before tox testing.
     * Adjust POTFILES.in for compilec.py move.
     * Fix so we start duplicity with the base python we run under.
+    * Cleanup some trailing spaces/lines in Docker files.
 
 2019-07-04  Kenneth Loafman  <kenneth@loafman.com>
 
